<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sound Record</string>
    <string name="action_settings">Settings</string>
    <string name="view_recordList">View Record List</string>
    <string name="insert_database">Add Record</string>
    <string name="update_database">Rename Record</string>
    <string name="query_database">Query Records</string>
    <string name="delete_database">Delete Records</string>
    <string name="make_record">Make Record</string>

</resources>
