<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_insertDb"
        android:layout_alignParentTop="true"
        android:layout_marginTop="67dp"
        android:background="@null"
        android:singleLine="true"
        android:ellipsize="end"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_viewRecordList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/msg"
        android:layout_alignParentTop="true"
        android:text="@string/view_recordList" />

    <Button
        android:id="@+id/button_insertDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_updateDb"
        android:layout_below="@+id/msg"
        android:layout_marginTop="16dp"
        android:text="@string/insert_database" />

    <Button
        android:id="@+id/button_updateDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_queryDb"
        android:layout_below="@+id/button_insertDb"
        android:layout_marginTop="14dp"
        android:text="@string/update_database" />

    <Button
        android:id="@+id/button_queryDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_updateDb"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="14dp"
        android:text="@string/query_database" />

    <Button
        android:id="@+id/button_deleteDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_queryDb"
        android:layout_below="@+id/button_queryDb"
        android:layout_marginTop="18dp"
        android:text="@string/delete_database" />

    <Button
        android:id="@+id/button_makeRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_deleteDb"
        android:layout_below="@+id/button_deleteDb"
        android:layout_marginTop="20dp"
        android:text="@string/make_record" />

</RelativeLayout>